--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-wget==3.2pycryptodome==3.15.0PyMySQL==1.0.2pypandoc==1.6.3python_docx==0.8.11requests==2.27.1ruamel.base==1.0.0xmltodict==0.13.0pyquery==1.4.3minio==7.1.12oss2==2.16.0xlrd==1.2.0
+wget==3.2pycryptodome==3.15.0PyMySQL==1.0.2pypandoc==1.6.3python_docx==0.8.11requests==2.27.1ruamel.base==1.0.0xmltodict==0.13.0pyquery==1.4.3minio==7.1.12oss2==2.16.0xlrd==1.2.0allure-pytestpytest-htmlpytest-xdistpytest-orderingpytest-rerunfailures
